--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "jest --config ./config/jest/jest.config.ts",
-		"test:ui": "npx loki test",
+		"loki:test:ui": "npx loki test",
 		"loki:test:ui.ok": "npx loki approve",
 		"loki:test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
 		"storybook": "start-storybook -p 6006 -c ./config/storybook",
